<resources>
    <string name="app_name">Challange2-x</string>
    <string name="text_hai">Hai Binarian ! ,</string>
    <string name="text_maumakan">Mau makan apa hari ini?</string>
    <string name="text_discount">Discount 50% !</string>
    <string name="text_pesan_makanan">Pesan makanan lewat aplikasi dan dapatkan diskonmu</string>
    <string name="text_menu_atas_1">Nasi</string>
    <string name="text_menu_2">Junk Food</string>
    <string name="text_menu_3">Minuman</string>
    <string name="text_menu_4">Dessert</string>
    <string name="tv_list_menu_bawah">! JANGAN KELEWATAN DISKON NYA !</string>
    <string name="tv_menu_bawah1">2131237129123123</string>
</resources>