<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_waves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_hai_binarian"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/text_hai"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/text_maumakan"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hai_binarian" />

        <ImageView
            android:id="@+id/iv_cart_icon"
            android:layout_width="27dp"
            android:layout_height="32dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/tv_hai_binarian"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="3dp"
            tools:src="@drawable/cart" />

        <ImageView
            android:id="@+id/iv_profile_icon"
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/iv_cart_icon"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="3dp"
            tools:src="@drawable/user" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="12dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/cl_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/banner_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/banner2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:background="@color/black" />

            <ImageView
                android:id="@+id/iv_discount"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/discount2"
                app:layout_constraintStart_toStartOf="@id/banner_view"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_discount"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/text_discount"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/iv_discount"
                app:layout_constraintTop_toTopOf="@id/iv_discount" />

            <TextView
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:ellipsize="none"
                android:fontFamily="sans-serif"
                android:text="@string/text_pesan_makanan"
                android:textColor="@color/white"
                android:textSize="10dp"
                app:layout_constraintStart_toEndOf="@id/iv_discount"
                app:layout_constraintTop_toBottomOf="@id/tv_discount" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/cv_banner">


        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:constraint_referenced_ids="id_menu_1,id_menu_2,id_menu_3,id_menu_4"
            app:flow_horizontalStyle="spread_inside"
            app:flow_verticalGap="16dp"
            app:flow_wrapMode="aligned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/id_menu_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="55dp"
                    android:src="@drawable/menu3" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/text_menu_atas_1"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/id_menu_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="55dp"
                    android:src="@drawable/menu2" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/text_menu_2"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/id_menu_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="55dp"
                    android:src="@drawable/menu4" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/text_menu_3"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/id_menu_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="55dp"
                    android:src="@drawable/menu1" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/text_menu_4"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="50dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/cl_menu"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/tv_bottom_menu1"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tv_list_menu_bawah"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/iv_menu_bawah1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/rice"
            app:layout_constraintTop_toBottomOf="@id/tv_bottom_menu1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <ImageView
            android:id="@+id/iv_menu_bawah2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/rice"
            app:layout_constraintEnd_toEndOf="@id/bottom_menu"
            app:layout_constraintStart_toEndOf="@id/iv_menu_bawah1"
            app:layout_constraintTop_toBottomOf="@id/tv_bottom_menu1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/menudiskon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_menu_bawah1"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/iv_menu_bawah1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/menudiskon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/tv_menu_bawah1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/bottom_menu"
            app:layout_constraintStart_toEndOf="@id/menudiskon1"
            app:layout_constraintTop_toBottomOf="@id/iv_menu_bawah2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>